--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "kUIMOU YU"
+title                    : "KUIMOU YU"
 title_separator          : "-"
 name                     : &name "KUIMOU YU"
 description              : &description "personal description"
