--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "KUIMOU YU"
   avatar           : "profile.png"
-  bio              : "Undergradute Student. @York University, Looking for mphil/phd position"
+  bio              : "incoming mphil student @The Hong Kong University of Science and Technology (Guangzhou)"
   location         : "Location"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
